# iata_teletype

./: Dockerfile  README.md  app.tcss  builder.py  docker-compose.yml  main.py  pyproject.toml  specifications.md  test_api.py  test_builder.py  tui.py
.agent/: context.md
.agent/standards/: preferred_libraries_and_patterns.md  project_structure_logic.md  uv_and_python_314_setup.md
.github/: copilot-instructions.md
config/: address_config.json
src/message_builder/: api.py  builder.py
tests/: test_api.py  test_builder.py  test_control_characters.py
tui/: app.py  app.tcss
